--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "python-shell": "^0.5.0"
+    "python-shell": "^0.5.0",
+    "socket.io": "^2.1.0"
   }
 }
